--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
         "node/exports-style": ["error", "module.exports"],
         "semi": [2, "always"],
         "no-extra-semi": 2,
+        "node/shebang": 0,
         "semi-spacing": [2, { "before": false, "after": true }]
     },
     "env": {
